--- a/mysql/install-mysql.yml
+++ b/mysql/install-mysql.yml
@@ -1,8 +1,48 @@
-- name: install mysql
-  hosts: all
+- name: setup Mysql with medium_db db and remote login
   become: yes
-  roles:
-    - role: geerlingguy.mysql
-
+  hosts: all
+  tasks:
+    - name: Installing Mysql  and dependencies
+      package:
+       name: "{{item}}"
+       state: present
+       update_cache: yes
+      loop:
+        - mariadb
+        - mariadb-server
+        - mariadb-libs
+        - MySQL-python
+        - perl-DBD-MySQL
+      become: yes
+    - name: start and enable mysql service
+      service:
+        name: mariadb
+        state: started
+        enabled: yes
+    - name: creating mysql user (medium_post)
+      mysql_user:
+        name: "{{db_user}}"
+        password: "{{db_pass}}"
+        priv: '*.*:ALL'
+        host: '%'
+        state: present
+    - name: creating medium_db
+      mysql_db:
+        name: "{{db_name}}"
+        state: present
+    - name: Enable remote login to mysql
+      lineinfile:
+         path: /etc/my.cnf
+         regexp: '^bind-address'
+         line: 'bind-address = 0.0.0.0'
+         backup: yes
+      notify:
+         - Restart mysql
+  handlers:
+    - name: Restart mysql
+      service:
+        name: mariadb
+        state: restarted
+        
 #mysql -u root -h localhost -p
 #GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;
